--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 	<title>Yamamoto Haus</title>
 
 	<!-- Components -->
-	<link rel="stylesheet" href="/css/components/home.style.css">
-	<link rel="stylesheet" href="/css/components/navigation.style.css">
-	<link rel="stylesheet" href="/css/components/sideMidia.css">
+	<link rel="stylesheet" href="css/components/home.style.css">
+	<link rel="stylesheet" href="css/components/navigation.style.css">
+	<link rel="stylesheet" href="css/components/sideMidia.css">
 	<!-- Video -->
-	<link rel="stylesheet" href="/css/videoSection/videoSection.style.css">
+	<link rel="stylesheet" href="css/videoSection/videoSection.style.css">
 	<!-- About -->
-	<link rel="stylesheet" href="/css/aboutSection/aboutCards.style.css">
-	<link rel="stylesheet" href="/css/aboutSection/aboutSection.style.css">
+	<link rel="stylesheet" href="css/aboutSection/aboutCards.style.css">
+	<link rel="stylesheet" href="css/aboutSection/aboutSection.style.css">
 	<!-- Values -->
-	<link rel="stylesheet" href="/css/valuesSection/valuesSection.style.css">
+	<link rel="stylesheet" href="css/valuesSection/valuesSection.style.css">
 	<!-- Services -->
-	<link rel="stylesheet" href="/css/servicesSection/servicesSection.style.css">
+	<link rel="stylesheet" href="css/servicesSection/servicesSection.style.css">
 	<!-- Contact -->
-	<link rel="stylesheet" href="/css/contactSection/contactSection.style.css">
-	<link rel="stylesheet" href="/css/section.5.style.css">
+	<link rel="stylesheet" href="css/contactSection/contactSection.style.css">
+	<link rel="stylesheet" href="css/section.5.style.css">
 </head>
 
 <body>
@@ -234,7 +234,7 @@
 			</div>
 		</section>
 	</div>
-	<script src="/js/app.js"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
