--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<nav class="navigation-wrapper">
 			<span>
 				<a href="#" class="brand-container">
-					<img class="brand-logo" src="/images/logo_capim.png" alt="logo capim">
+					<img class="brand-logo" src="images/logo_capim.png" alt="logo capim">
 					<div class="brand-name-wrapper">
 						<h1 class="brand-title">Yamamoto Haus</h1>
 						<h3 class="brand-subtitle">Design de interiores</h3>
@@ -63,22 +63,22 @@
 	<div class="side-midia-container">
 		<div class="side-midia-item">
 			<a href="" target="_blank">
-				<img src="/images/sideMidia/instagram.jpeg" alt="instagram">
+				<img src="images/sideMidia/instagram.jpeg" alt="instagram">
 			</a>
 		</div>
 		<div class="side-midia-item">
 			<a href="" target="_blank">
-				<img src="/images/sideMidia/pinterest.jpeg" alt="pinterest">
+				<img src="images/sideMidia/pinterest.jpeg" alt="pinterest">
 			</a>
 		</div>
 		<div class="side-midia-item">
 			<a href="" target="_blank">
-				<img src="/images/sideMidia/whatsapp.jpeg" alt="whatsapp">
+				<img src="images/sideMidia/whatsapp.jpeg" alt="whatsapp">
 			</a>
 		</div>
 		<div class="side-midia-item">
 			<a href="" target="_blank">
-				<img src="/images/sideMidia/linkedin.jpeg" alt="linkedin">
+				<img src="images/sideMidia/linkedin.jpeg" alt="linkedin">
 			</a>
 		</div>
 	</div>
@@ -112,16 +112,16 @@
 				<div class="about-section-detail-container">
 					<div class="about-section-card-container">
 						<div class="about-section-card">
-							<img src="../images/partners.jpg" alt="Natasha e Hugo">
+							<img src="images/partners.jpg" alt="Natasha e Hugo">
 						</div>
 
 						<div class="about-section-card">
 							<h3 class="h3">Natasha M. Yamamoto</h3>
-							<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
+							<img src="images/character_Natasha.jpg" alt="Natasha Michiko">
 						</div>
 
 						<div class="about-section-card">
-							<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
+							<img src="images/character_Hugo.jpg" alt="Hugo Wegner">
 							<h3 class="h3">Hugo W. de Moura Nessler</h3>
 						</div>
 					</div>
@@ -150,29 +150,29 @@
 		<!-- Values Section -->
 		<section class="sections">
 			<div class="values-section-content-wrapper">
-				<img class="values-section-bamboo" src="/images/outros/bambu_1.png" alt="bambu">
+				<img class="values-section-bamboo" src="images/outros/bambu_1.png" alt="bambu">
 
 				<div class="values-section-text-box">
 					<h2 class="h2">Nossos valores...</h2>
 					<div class="values-section-text-box-item">
-						<img class="values-section-kanjis" src="../images/outros/omoiyari.png" alt="omoiyari">
+						<img class="values-section-kanjis" src="images/outros/omoiyari.png" alt="omoiyari">
 						<h3 class="h3">Empatia, cuidado e consideração - <span>omoiyari.</span></h3>
 						<p class="p">Cuidar do presente, das pessoas e de sí mesmo, preservar a vida, criar conexões,
 							valorizar as origens e respeitar as futuras gerações.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<img class="values-section-kanjis" src="../images/outros/kintsugi.png" alt="kintsugi">
+						<img class="values-section-kanjis" src="images/outros/kintsugi.png" alt="kintsugi">
 						<h3 class="h3">Emendar com ouro - <span>kintsugi.</span></h3>
 						<p class="p">Errar é humano. Nossa missão é ressignificar o erro em aprendizado, permitindo a
 							evolução contínua como pessoas e profissionais.</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<img class="values-section-kanjis" src="../images/outros/kansha.png" alt="kansha">
+						<img class="values-section-kanjis" src="images/outros/kansha.png" alt="kansha">
 						<h3 class="h3">Gratidão - <span>kansha.</span></h3>
 						<p class="p">Às pessoas, às oportunidades, ao trabalho, à natureza e à vida, muito obrigado!</p>
 					</div>
 					<div class="values-section-text-box-item">
-						<img class="values-section-kanjis" src="../images/outros/ganbatte.png" alt="ganbatte">
+						<img class="values-section-kanjis" src="images/outros/ganbatte.png" alt="ganbatte">
 						<h3 class="h3">Faça o melhor que puder e nunca desista - <span>ganbatte.</span></h3>
 						<p class="p">Seja como o bambu, flexível, e sustente-se nas suas raízes nos momentos de
 							adversidade, e assim como o bambu nas estações chuvosas, cresça (progrida e evolua) em
@@ -223,7 +223,7 @@
 		<!-- Contact Section -->
 		<section class="sections" id="contact">
 			<div class="contact-section-content-wrapper">
-				<img class="contact-section-bamboo" src="/images/outros/bambu_2.png" alt="bambu">
+				<img class="contact-section-bamboo" src="images/outros/bambu_2.png" alt="bambu">
 				<div class="contact-red-ball"></div>
 				<div class="contact-section-details">
 					<h2 class="h2">Entre em contato!</h2>
